--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,14 +23,18 @@ install:
     rm libzip5_1.5.1-0ubuntu1_amd64.deb
     rm libzip-dev_1.5.1-0ubuntu1_amd64.deb
 - ps: |
+    choco install -y windowsdriverkit10
+    choco install -y windows-sdk-10.1
     PowerShell -Command 'Set-ExecutionPolicy -ExecutionPolicy RemoteSigned'
-    PowerShell -File ci_msys_prepare.ps1 'C:\tools\msys64'
+    PowerShell -File ci_msys_prepare.ps1 'C:\msys64'
     
 before_build:
 - git submodule update --init --recursive
+- git submodule update --init --force
 
 build_script:
 - sh: ./build.sh
 - ps: |
     PowerShell -Command 'Set-ExecutionPolicy -ExecutionPolicy RemoteSigned'
     PowerShell -File ci_msys_build.ps1 'C:\msys64'
+    ./bin/qemu-system-ps4.exe
